--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
+    "mobx": "^6.15.0",
+    "mobx-react-lite": "^4.1.1",
+    "nativewind": "^4.2.1",
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0"
+    "react-native-screens": "^4.16.0",
+    "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -34,8 +40,10 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react-test-renderer": "19.0.0",
+    "tailwindcss": "^3.4.18",
     "typescript": "5.0.4"
   },
   "engines": {
